    15- possible SEGV in rnfpseudobasis(, [pol,lim])
    16- wrong result in elllog over F_p, p in [2^63,2^64[
        p=13824553909862352061; A=8953655473130154624; B=9775907253961339458;
        P=[6444058885176327583,7963649599850249187];
        E=ellinit([A,B],p); Q=ellmul(E,P,2);
        elllog(E,Q,P) -> 0 [ Flj_mulu_pre would not accept n >= 2^63 ]
    17- wrong result in mfsymboleval when path extremities are close to real
        axis (cusps were OK) [#2075]
    18- mfcoefs(mfDelta(),0) -> SEGV [#2078]
    19- GC error in lfuncreate(elliptic curve over number field) [#2080]
    20- X11 and Qt graphic engine: pari_close called too soon => crash
    21- pariold.h: mix up with obsoleted  taille / taille2

  Changed
     1- [libpari] gp_filter return value is now allocated on the stack
        [was undocumented, malloc'ed and resulted in memory leaks]
     2- improved n!, factorial(n) and lngamma(n) for integral n
     3- improved bernvec: no longer Obsolete
     4- [libpari] mpbern is now obsolete: use constbern
     5- rewrote the Bernoulli number cache (using zeta(2n) = * B_{2n})
        and power recycling for zeta(2n) + additive Clausen von Staudt):
        orders of magnitude faster and always store Bernoulli in rational form
BA   6- [libpari] ZpX_ZpXQ_liftroot_ea: change interface for 'early'
     7- bnf.fu: return '0' if bnf does not contain the fundamental units (was an
        error)
     8- support ?? _+_ and friends [extended help for specific operators
        instead of redirecting to "GP operators"]
     9- support ?? _op=_ and ?? op=; support ?? _++ and friends
    10- x ^ t_FRAC: return an exact result if possible; e.g. 4^(1/2) is now 2

  Added
     1- [libpari] nonsquare_Fl
     2- [libpari] set_avma
BA   3- [libpari] FpXC_FpXQ_eval
     4- [libpari] mulu_interval_step
     5- new file src/basemath/bern.c
     6- [libpari] divisorsu_moebius
     7- [libpari] ZXQ_powu

  Removed
     1- member functions .futu and .tufu [deprecated since 2.2]