@@ -123,4 +123,33 @@ x^-1 + O(x^0)
 -1000000.5772166539584356686368774405975327324364299837039157908236471064277
 4207952925289528676019700485467432997942048345744111188601460149907155979685
 1143
+   realprecision = 38 significant digits
+2.6789385347077476336556929409746776441
+1.3541179394264004169452880281545137855
+3.6256099082219083119306851558676720030
+1.2254167024651776451290983033628905269
+5.5663160017802352042500968952077261114
+1.1287870299081259612609010902588420133
+7.5339415987976119046992298412151336246
+2.3704361844166009086464735041766525099
+1.4345188480905567756360197394564231366
+1.0896523574228969512523767551028929712
+11.499428186073990663885609852439200980
+2.1275570586022219715722784393442933506
+1.5287091970871110050473026638281056936
+1.0555465648134663023137014847342622098
+23.462487693183319881385711469586294930
+4.3968001000002525082360090974782051647
+3.0815055600034352026059386146337367711
+1.9322353352363753417755866326226966547
+1.6399148048748842094926399415540991281
+1.2850506996660505175844624287857794935
+1.1737241052110611751264934325039885767
+1.0258364967528902874118049964999185687
+1.1304468487397583052339766579000353759 E156
+1.1413851228335801146661943537905279353 E154
+-3.1238305253309576820203344603145336407 E-155
+3.1251326639409330707998343913109131879 E-157
+4.5628187500777884959959637081483557229 E456568
+1.3768469063730103610139202204469277024 E-456572
 Total time spent: 16
