@@ -52,3 +52,33 @@ lngamma(2^301 + 2000*I)
 
 gamma(1+10^-30)
 gamma(-1e-6)
+
+\p38
+gamma(1/3)
+gamma(2/3)
+gamma(1/4)
+gamma(3/4)
+gamma(1/6)
+gamma(5/6)
+gamma(1/8)
+gamma(3/8)
+gamma(5/8)
+gamma(7/8)
+gamma(1/12)
+gamma(5/12)
+gamma(7/12)
+gamma(11/12)
+gamma(1/24)
+gamma(5/24)
+gamma(7/24)
+gamma(11/24)
+gamma(13/24)
+gamma(17/24)
+gamma(19/24)
+gamma(23/24)
+gamma(1/24+100)
+gamma(1/24+99)
+gamma(1/24-99)
+gamma(1/24-100)
+gamma(1/24+10^5)
+gamma(1/24-10^5)
